--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "ext-curl": "*",
         "laravel/breeze": "^2.0",
         "laravel/fortify": "^1.21",
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "ext-curl": "*"
+        "php-http/httplug": "^2.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
