--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.3",
+        "php": "^7.1|^8.0|^8.1|^8.2|^8.3",
         "ext-curl": "*",
         "laravel/breeze": "^2.0",
         "laravel/fortify": "^1.21",
