--- a/.env.copy
+++ b/.env.copy
@@ -27,7 +27,7 @@ DB_HOST=127.0.0.1
 #  DB_PORT=3306
 #  DB_DATABASE=backend
 #  DB_USERNAME=root
-#  DB_PASSWORD=Project23
+#  DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=180
@@ -55,14 +55,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.yandex.ru
-MAIL_PORT=587
-MAIL_USERNAME=kondaurov.semion@yandex.ru
-MAIL_PASSWORD=payocnxpdvtxicjp
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=kondaurov.semion@yandex.ru
-MAIL_FROM_NAME="Laravel"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
